[package]
name = "simspace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
#rusqlite = "0.29.0"
kdtree = "0.7.0"
num-traits = "0.2.16"
strum = "0.25.0"
strum_macros = "0.25.2"
#bevy_ecs = "0.11.2"
bevy = "0.11.2"

[features]
godot = ["godot/experimental-threads"]
#rusqlite = ["rusqlite/functions"]